--- a/README.adoc
+++ b/README.adoc
@@ -14,7 +14,7 @@ This repo aims to solve **ALL** https://projecteuler.net[Project Euler] problems
 
 // STATUS TABLE
 * **1-900**: done
-* **901-982**: 78/82 (TODO: 979, 980, 981, 982)
+* **901-983**: 78/83 (TODO: 979, 980, 981, 982, 983)
 
 Tested on Python 3.13.7, PyPy 7.3.20, Ubuntu 25.10.
 
@@ -1461,6 +1461,7 @@ Benchmarked on Lenovo ThinkPad P14s by running `./main.py`:
 | link:solvers/980.py[980.py] | link:solvers/980.md[980.md] | 0.508 | gpt-5.2-thinking |  | 124999683766 | error: missing reference answer
 | link:solvers/981.py[981.py] | link:solvers/981.md[981.md] | 0.242 | gpt-5.2-thinking |  | 794963735 | error: missing reference answer
 | link:solvers/982.py[982.py] | link:solvers/982.md[982.md] | 0.199 |  |  | 4.381944 | error: missing reference answer
+| link:solvers/983.py[983.py] | link:solvers/983.md[983.md] | 52.845 |  |  | 6725 | error: missing reference answer
 |===
 
 === Non-Python solvers
@@ -1477,20 +1478,7 @@ We have placed non-Python solvers in this separate table for the following reaso
 | link:solvers/1.lean[1.lean] | 0.007 | 233168 |
 | link:solvers/2.lean[2.lean] | 0.021 | 4613732 |
 | link:solvers/2.lean[2.lean] | 0.021 | 4613732 |
-|===
-
-=== Slowest solvers
-
-This section lists the slowest solvers we have. Anything incredibly slower than most problems is likely to have important missing optimizations which we should ideally find.
-
-A bar plot of solver times can be generated with link:plot.py[] but I couldn't be bothered showing it here:
-
-----
-./plot.py
-----
-
-50 slowest Python solvers which give the correct answer:
-
+| ID | Runtime (s) | Output | Error
 // SLOWEST PYTHON SOLVERS TABLE
 |===
 | ID | Runtime (s)
